# ProjetC-Sorting

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  TODO.md  install_libs.ps1  install_libs.sh  install_sdl3.sh  testfile.txt  testfile_int.txt  testfile_string.txt
include/: Settings.h  ansi.h  app.h  audio.h  button.h  checkbox.h  color.h  column_graph.h  column_graphic.h  container.h  element.h  frame.h  geometry.h  help_frame.h  image.h  input.h  input_box.h  layout.h  list.h  main_frame.h  map.h  random.h  resource_manager.h  select.h  sort.h  stats.h  string_builder.h  style.h  text.h  timer.h  types.h  utils.h
src/: app.c  audio.c  button.c  checkbox.c  column_graph.c  container.c  element.c  geometry.c  help_frame.c  image.c  input.c  input_box.c  layout.c  list.c  main.c  main_frame.c  random.c  resource_manager.c  select.c  sort.c  stats.c  style.c  text.c  utils.c
